Add the JS and the README files

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <form action="" class="page-form">
       <h1 class="page-title">Predict the Ethnicity Of a Name</h1>
       <div class="search-box">
-        <input type="text" id="nameInput" placeholder="Last or full name" />
+        <input type="text" class= "name-input" id="dataInput" placeholder="Last or full name" />
         <button class="search-btn">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
